# Blog

./: .gitignore  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  .pylintrc  Dockerfile  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
backend/src/: config.py  exceptions.py  main.py  unit_of_work.py
backend/src/db/: base.py
backend/src/db/schemas/: abc.py  post.py  user.py
backend/src/endpoints/: auth.py  post.py  user.py
backend/src/repository/: abc.py  post.py  user.py
backend/src/service/: auth.py  post.py  user.py
backend/src/utils/: auth.py  images.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api.py  test_api_post.py  test_api_user.py
backend/tests/integration/: test_mongo.py  test_repository.py  test_uow.py
backend/tests/integration/repository/: test_repository_post.py  test_repository_user.py
backend/tests/unit/: test_schemas.py  test_services.py
backend/tests/unit/services/: test_services_post.py  test_services_user.py
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  react-app-env.d.ts
frontend/src/api/: authApi.ts  customFetchBase.ts  userApi.ts
frontend/src/app/: store.ts
frontend/src/features/: notifyMessage.ts  theme-context.ts  theme-context.tsx  userSlice.ts
frontend/src/pages/: login.page.tsx  register.page.tsx  settings.page.tsx  unauthorize.page.tsx
frontend/src/styles/: base.scss
frontend/src/types/: base.ts  user.ts
frontend/src/utils/: imageConverttoBase.ts  test-utils.tsx
nginx/: default.conf
(+41 files in other folders)
